<?xml version="1.0"?>
<package format="3">
  <name>hsrb_bringup</name>
  <version>2.0.0</version>
  <description>The hsrb bringup scripts.</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Akiyoshi Ochiai</author>
  <author>Kazuhito Tanaka</author>
  <author>Kazuto Murase</author>
  <author>Keisuke Takeshita</author>
  <author>Kiyohiro Sogen</author>
  <author>Koji Terada</author>
  <author>Tamaki Nishino</author>
  <author>Yuka Hashiguchi</author>
  <author>Yusuke Ota</author>
  <author>Yutaka Takaoka</author>
  <author>Yuto Mori</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>hsrb_base_controllers</exec_depend>
  <exec_depend>hsrb_gripper_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>openni2_camera</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
